--- a/src/components/ButtonLink/ButtonLink.module.css
+++ b/src/components/ButtonLink/ButtonLink.module.css
@@ -2,9 +2,12 @@
   display: inline-flex;
   align-items: center;
   justify-content: center;
-
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: -0.01em;
   height: 56px;
-  padding: 16px 40px;
+  padding: 16px 50px;
   border-radius: 200px;
 
   background-color: #e44848;
@@ -13,4 +16,9 @@
 
   white-space: nowrap;
   width: fit-content;
+}
+
+.button:hover,
+.button:focus {
+  background-color: #d84343;
 }
