--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -1,6 +1,6 @@
 .hero {
   width: 100%;
-  height: 696px;
+  /* height: 696px; */
 
   background-image:
     linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
@@ -8,24 +8,28 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  position: relative;
+  padding-top: 260px;
+  padding-bottom: 260px;
 }
 
 .content {
-  max-width: 1200px;
+  max-width: 1440px;
+  padding: 0 64px;
   margin: 0 auto;
-  padding: 0 24px;
 
   color: #ffffff;
 }
 
 .title {
+  font-weight: 600;
   font-size: 48px;
-  font-weight: 700;
-  margin-bottom: 12px;
+  line-height: 67%;
+  margin-bottom: 16px;
 }
 
 .text {
-  font-size: 18px;
-  max-width: 500px;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 133%;
+  margin-bottom: 40px;
 }
