--- a/src/components/CamperDetails/CamperDetails.module.css
+++ b/src/components/CamperDetails/CamperDetails.module.css
@@ -1,7 +1,10 @@
+.topRow {
+  margin-bottom: 28px;
+}
 .gallery {
   display: flex;
   gap: 20px;
-  margin-top: 20px;
+  margin-bottom: 28px;
 }
 .media {
   border-radius: 10px;
@@ -12,7 +15,63 @@
 .img {
   width: 100%;
   height: 100%;
-  aspect-ratio: 4 / 3;
+
   object-fit: cover;
   display: block;
+}
+.title {
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 133%;
+  color: #111827;
+  margin: 0;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin-bottom: 8px;
+}
+.meta {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  margin-top: 0;
+
+  color: #101828;
+  margin-bottom: 16px;
+}
+.rating {
+  display: inline-flex;
+  align-items: center;
+  text-decoration: underline;
+}
+
+.star {
+  fill: #f59e0b;
+}
+.location {
+  display: inline-flex;
+  align-items: center;
+  gap: 6px;
+}
+.price {
+  margin: 0;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 133%;
+  color: #111827;
+  white-space: nowrap;
+}
+.desc {
+  margin: 0;
+  margin-bottom: 36px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+}
+.bottomRow {
+  display: flex;
+  gap: 40px;
 }
