--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -1,6 +1,5 @@
 .hero {
   width: 100%;
-  /* height: 696px; */
 
   background-image:
     linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
@@ -17,7 +16,7 @@
   padding: 0 64px;
   margin: 0 auto;
 
-  color: #ffffff;
+  color: #f7f7f7;
 }
 
 .title {
